--- a/back/package.json
+++ b/back/package.json
@@ -22,16 +22,24 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.3.1",
+    "@types/multer": "^1.4.8",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
     "eslint-plugin-nestjs": "^1.2.3",
     "i": "^0.3.7",
     "mapped-types": "^0.0.1",
     "npm": "^10.1.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
